<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bgcolor"
    tools:context="com.jdcasas.appciviltopia.Login">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_margin="5dp"
                android:baselineAligned="false">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Acceso"
                        android:id="@+id/tw_acceso"
                        android:background="@drawable/rounded_corners_textview"
                        android:layout_marginTop="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Departamento"
                        android:background="@drawable/rounded_corners_textview"
                        android:id="@+id/tw_departamento"
                        android:layout_marginTop="15dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4">
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sp_acceso"
                        android:spinnerMode="dropdown"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:textSize="@dimen/spinnerletra"/>
                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sp_departamento"
                        android:spinnerMode="dropdown"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="25dp"
                        android:textSize="@dimen/spinnerletra"/>
                </LinearLayout>
            </LinearLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                >
                <AutoCompleteTextView
                    android:id="@+id/usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_usuario"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginTop="20dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset"
                android:textSize="@dimen/formularioletra"
                android:id="@+id/ButtonResetl"
                android:layout_marginRight="4dip"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ingresar"
                android:textSize="@dimen/formularioletra"
                android:id="@+id/ButtonIngresar"
                android:layout_marginRight="4dip"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                 />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volver"
                android:textSize="@dimen/formularioletra"
                android:id="@+id/ButtonVolver"
                android:layout_marginRight="4dip"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:theme="@style/MyButton"
                />


        </LinearLayout>

            <TextView android:id="@+id/TextViewOld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Olvidaste tu clave!"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textSize="20dip"
                android:background="#ffffff"
                android:layout_marginTop="15dip"
                android:textColor="#cf185cd2"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="60dp"
                android:id="@+id/imageView"
                android:src="@drawable/login"

                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
